[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/FocusSpinBox.gd" type="Script" id=1]

[node name="FocusSpinBox" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -56.0
margin_right = 174.0
margin_bottom = 57.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
label_text = "Label"

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBox"]
margin_right = 318.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "0"

[node name="ButtonContainer" type="VBoxContainer" parent="HBox"]
margin_left = 322.0
margin_right = 344.0
margin_bottom = 113.0
size_flags_vertical = 7

[node name="Up" type="Button" parent="HBox/ButtonContainer"]
margin_right = 22.0
margin_bottom = 54.0
size_flags_vertical = 3
text = "/\\"

[node name="Down" type="Button" parent="HBox/ButtonContainer"]
margin_top = 58.0
margin_right = 22.0
margin_bottom = 113.0
size_flags_vertical = 3
text = "\\/"

[node name="RepeatDelay" type="Timer" parent="HBox/ButtonContainer"]

[node name="RepeatInterval" type="Timer" parent="HBox/ButtonContainer"]

[node name="Padding" type="Control" parent="HBox"]
margin_left = 348.0
margin_right = 348.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox"]
visible = false
margin_left = 191.0
margin_top = 49.0
margin_right = 252.0
margin_bottom = 63.0
size_flags_horizontal = 2
size_flags_vertical = 6
text = "Whatever"
